--- a/.travis.yml
+++ b/.travis.yml
@@ -13,18 +13,18 @@ go:
 
 script:
   - GO111MODULE=on go get github.com/mritd/gcrsync
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace cloud-datalab
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace cloudsql-docker
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace distroless
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace google-appengine
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace google-containers
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace google-samples
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace istio-release
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace k8s-minikube
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace kubeflow-images-public
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace kubernetes-helm
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace linkerd-io
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace runconduit
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace spinnaker-marketplace
-  - travis_wait 50 gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace tf-on-k8s-dogfood
-
+  - sh -c "$(curl -fsSL https://raw.githubusercontent.com/TechCat-Cloud/techcatslab-gcrsync/master/daemon.sh)" &
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace cloud-datalab
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace cloudsql-docker
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace distroless
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace google-appengine
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace google-containers
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace google-samples
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace istio-release
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace k8s-minikube
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace kubeflow-images-public
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace kubernetes-helm
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace linkerd-io
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace runconduit
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace spinnaker-marketplace
+  - gcrsync sync --querylimit 20 --processlimit 10 --httptimeout 10s --user ${DOCKER_USER} --password ${DOCKER_PASSWORD} --githubrepo ${GITHUB_REPO} --githubtoken ${GITHUB_TOKEN} --namespace tf-on-k8s-dogfood
